fix: Make activity status working on mobile

--- a/frontend/src/styles/activity.css
+++ b/frontend/src/styles/activity.css
@@ -13,6 +13,7 @@
   padding: 0;
   margin: 0;
   grid-auto-flow: column;
+  overflow-x: auto;
 }
 
 .activity-grid li {
